# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

sources = files('ip_in.c',
'addr_pool.c',  
'debug.c',
'tcp_send_buffer.c',
'ip_out.c',
'pacing.c',      
'tcp_in.c',
'api.c',   
'eth_in.c',
'tcp_stream.c',
'ccp.c',
'eth_out.c', 
'tcp_stream_queue.c',
'tcp_out.c',
'ccp_priv.c',
'serialize.c',    
'tcp_rb_frag_queue.c',
'eventpoll.c',
'machine.c',
'tcp_util.c',
'clock.c',
'memory_mgt.c',
'socket.c',  
'tcp_ring_buffer.c',
'fhash.c',
'timer.c',
'config.c',
'libccp.c',
'tcp_sb_queue.c')

headers = files('config.h',
'ps.h',
'socket.h',
'mtcp.h',
'tcp_sb_queue.h',
'ip_in.h',
'mtcp_epoll.h',
'addr_pool.h',
'debug.h',
'tcp_send_buffer.h',
'ip_out.h',
'pacing.h',
'tcp_in.h',
'eth_in.h',
'tcp_stream.h',
'ccp.h',
'libccp.h',
'rte_tcpstack.h',
'tcp_out.h',
'eth_out.h',
'logger.h',
'tcp_stream_queue.h',
'ccp_priv.h',
'serialize.h',
'tcp_rb_frag_queue.h',
'eventpoll.h',
'tcp_util.h',
'clock.h',
'memory_mgt.h',
'tcp_ring_buffer.h',
'fhash.h',
'stat.h',
'timer.h')
deps += ['mbuf']

cflags += '-fgnu89-inline'

allow_experimental_apis = true
